# campaigns-dashboard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: backfill_ad_creatives.py  build_reports.py  campaign_analysis.py  changelog_impact_report.py  demographics_report.py  fetch_extra_data.py  gtm_report.py  segment_report.py
src/: __init__.py  __main__.py  backfill.py  config.py  daily_backfill.py  logging_setup.py  main.py
src/ai/: __init__.py  chat.py  tldr.py  tools.py
src/alerts/: __init__.py  anomaly.py  engine.py
src/bot/: __init__.py  chat_router.py  handlers.py  middleware.py  setup.py
src/dashboard/: Overview.py  agents.py  app.py  chat.py  components.py  db.py  settings.py  tools.py  tracking_health.py
src/dashboard/pages/: 1_Campaign_Detail.py  (+10 more)
src/db/: __init__.py  client.py  migrations.py  schema.py
src/ga4/: __init__.py  client.py  ingest.py
src/meta/: __init__.py  client.py  ingest.py  pixel_ingest.py
src/mmm/: __init__.py  model.py  scheduler.py
src/reports/: __init__.py  builder.py  charts.py  daily.py  splitter.py  weekly.py
src/scheduler/: __init__.py
src/sheets/: client.py
src/shopify/: __init__.py  client.py  ingest.py
tests/: conftest.py  test_ads_page.py  test_ai_chat.py  test_ai_tools.py  test_alert_engine.py  test_allowlist.py  test_anomaly.py  test_attribution_page.py  test_backfill.py  test_campaign_detail.py  test_charts.py  test_chat_router.py  test_components.py  test_cross_source.py  test_dashboard_agents.py  test_dashboard_app_smoke.py  test_dashboard_auth.py  test_dashboard_charts.py  test_dashboard_chat.py  test_dashboard_chat_3agent.py  test_dashboard_db.py  test_dashboard_db_pragmas.py  test_dashboard_isolation.py  test_dashboard_settings.py  test_dashboard_tier.py  test_dashboard_tools.py  test_funnel_page_v3_smoke.py  test_funnel_v3.py  test_ga4_client.py  test_ga4_ingest.py  test_glossary_page.py  test_graceful_degradation.py  test_heartbeat.py  test_meta_client.py  test_meta_ingest.py  test_mmm_model.py  test_mmm_persistence.py  test_mmm_scheduler.py  test_overview_conv_metric_picker.py  test_overview_v2_kpi.py  (+13 more)
(+93 files in other folders)
