[project]
name = "ads-reporting"
version = "0.1.0"
description = "AI-powered ads reporting agent (Meta Ads + GA4 → Telegram)"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.28,<4",
    "aiosqlite>=0.20,<1",
    "apscheduler>=3.10,<4",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "structlog>=24,<25",
    "tenacity>=9,<10",
    "python-dotenv>=1,<2",
    "tzdata>=2024.1",
    "facebook-business>=22.0",
    "google-analytics-data>=0.22.0,<1",
    "anthropic>=0.102.0,<1",
    "pandas>=2,<3",
    "sqlalchemy>=2,<3",
    "sentry-sdk>=2.60.0,<3",
    "gspread>=6,<7",
    "streamlit>=1.35,<2",
    "plotly>=5.20,<6",
    "statsmodels>=0.14",
    "scipy>=1.13",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
